process_dataset fixed (itself?)

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "5.0  4.0  I thought you might like these:\\r\\n1) Slim Dow...     1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "18651"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,53 +579,93 @@
     "    elif l_negative > l_positive:\n",
     "        negative = negative.sample(min_len, random_state=myseed)\n",
     "\n",
-    "    dataset.pos_word_counter = positive['ppBody'].str.explode().value_counts()\n",
-    "    dataset.neg_word_counter = negative['ppBody'].str.explode().value_counts()"
+    "    dataset.pos_word_counter = positive['ppBody'].str.split().explode().value_counts()\n",
+    "    dataset.neg_word_counter = negative['ppBody'].str.split().explode().value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "positive = d3.pp_df[d3.pp_df['label'] == \"1\"]"
+    "d_df_copy = d.pp_df.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_copy = d_df_copy[d_df_copy['label'] == \"1\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0      [s, a, v, e, l, i, f, e, i, n, s, u, r, a, n, ...\n",
-       "2.0      [f, i, g, h, t, r, i, s, k, c, a, n, c, e, r, ...\n",
-       "3.0      [f, i, g, h, t, r, i, s, k, c, a, n, c, e, r, ...\n",
-       "4.0      [a, d, u, l, t, c, l, u, b, o, f, f, e, r, s, ...\n",
-       "5.0      [t, h, o, u, g, h, t, m, i, g, h, t, l, i, k, ...\n",
+       "1.0      save up to 70 on life insurance why spend more...\n",
+       "2.0      1 fight the risk of cancer http www adclick ws...\n",
+       "3.0      1 fight the risk of cancer http www adclick ws...\n",
+       "4.0      adult club offers free membership instant acce...\n",
+       "5.0      i thought you might like these 1 slim down gua...\n",
        "                               ...                        \n",
-       "429.0    [s, u, b, j, e, c, t, l, u, c, k, y, c, o, n, ...\n",
-       "430.0    [s, u, b, j, e, c, t, n, e, w, c, a, p, i, t, ...\n",
-       "431.0    [s, u, b, j, e, c, t, s, u, b, m, i, t, 6, 0, ...\n",
-       "432.0    [s, u, b, j, e, c, t, s, u, b, m, i, t, 6, 0, ...\n",
-       "433.0    [s, u, b, j, e, c, t, s, t, a, n, d, d, e, a, ...\n",
+       "429.0    subject lucky you congratulations you ve been ...\n",
+       "430.0    subject new on capitalfm com this is new at ht...\n",
+       "431.0    subject submit 600 this is not spam you are re...\n",
+       "432.0    subject submit 600 this is not spam you are re...\n",
+       "433.0    subject i can t stand it dear internet user de...\n",
        "Name: ppBody, Length: 7328, dtype: object"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "positive['ppBody'].str.split()"
+    "positive_copy['ppBody']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0      [save, up, to, 70, on, life, insurance, why, s...\n",
+       "2.0      [1, fight, the, risk, of, cancer, http, www, a...\n",
+       "3.0      [1, fight, the, risk, of, cancer, http, www, a...\n",
+       "4.0      [adult, club, offers, free, membership, instan...\n",
+       "5.0      [i, thought, you, might, like, these, 1, slim,...\n",
+       "                               ...                        \n",
+       "429.0    [subject, lucky, you, congratulations, you, ve...\n",
+       "430.0    [subject, new, on, capitalfm, com, this, is, n...\n",
+       "431.0    [subject, submit, 600, this, is, not, spam, yo...\n",
+       "432.0    [subject, submit, 600, this, is, not, spam, yo...\n",
+       "433.0    [subject, i, can, t, stand, it, dear, internet...\n",
+       "Name: ppBody, Length: 7328, dtype: object"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positive_copy['ppBody'].str.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -635,45 +675,14 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 24\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m process_dataset(d)\n",
-      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 24\u001b[0m in \u001b[0;36mprocess_dataset\u001b[1;34m(dataset)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39melif\u001b[39;00m l_negative \u001b[39m>\u001b[39m l_positive:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     negative \u001b[39m=\u001b[39m negative\u001b[39m.\u001b[39msample(min_len, random_state\u001b[39m=\u001b[39mmyseed)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m dataset\u001b[39m.\u001b[39mpos_word_counter \u001b[39m=\u001b[39m positive[\u001b[39m'\u001b[39;49m\u001b[39mppBody\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39;49mexplode()\u001b[39m.\u001b[39mvalue_counts()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m dataset\u001b[39m.\u001b[39mneg_word_counter \u001b[39m=\u001b[39m negative[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mexplode()\u001b[39m.\u001b[39mvalue_counts()\n",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 26\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m process_dataset(d)\n",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 26\u001b[0m in \u001b[0;36mprocess_dataset\u001b[1;34m(dataset)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39melif\u001b[39;00m l_negative \u001b[39m>\u001b[39m l_positive:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     negative \u001b[39m=\u001b[39m negative\u001b[39m.\u001b[39msample(min_len, random_state\u001b[39m=\u001b[39mmyseed)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m dataset\u001b[39m.\u001b[39mpos_word_counter \u001b[39m=\u001b[39m positive[\u001b[39m'\u001b[39;49m\u001b[39mppBody\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39;49mexplode()\u001b[39m.\u001b[39mvalue_counts()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m dataset\u001b[39m.\u001b[39mneg_word_counter \u001b[39m=\u001b[39m negative[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mexplode()\u001b[39m.\u001b[39mvalue_counts()\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'StringMethods' object has no attribute 'explode'"
      ]
     }
    ],
    "source": [
     "process_dataset(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0      s a v e l i f e i n s u r a n c e s p e n d l ...\n",
-       "2.0      f i g h t r i s k c a n c e r h t t p w w w a ...\n",
-       "3.0      f i g h t r i s k c a n c e r h t t p w w w a ...\n",
-       "4.0      a d u l t c l u b o f f e r s f r e e m e m b ...\n",
-       "5.0      t h o u g h t m i g h t l i k e s l i m g u a ...\n",
-       "                               ...                        \n",
-       "429.0    s u b j e c t l u c k y c o n g r a t u l a t ...\n",
-       "430.0    s u b j e c t n e w c a p i t a l f m c o m n ...\n",
-       "431.0    s u b j e c t s u b m i t 6 0 0 s p a m r e c ...\n",
-       "432.0    s u b j e c t s u b m i t 6 0 0 s p a m r e c ...\n",
-       "433.0    s u b j e c t s t a n d d e a r i n t e r n e ...\n",
-       "Name: ppBody, Length: 7328, dtype: object"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "positive['ppBody']"
    ]
   },
   {
