output from testing - didn't commit

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,24 +665,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_dataset(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'StringMethods' object has no attribute 'explode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 26\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m process_dataset(d)\n",
-      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 26\u001b[0m in \u001b[0;36mprocess_dataset\u001b[1;34m(dataset)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39melif\u001b[39;00m l_negative \u001b[39m>\u001b[39m l_positive:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     negative \u001b[39m=\u001b[39m negative\u001b[39m.\u001b[39msample(min_len, random_state\u001b[39m=\u001b[39mmyseed)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m dataset\u001b[39m.\u001b[39mpos_word_counter \u001b[39m=\u001b[39m positive[\u001b[39m'\u001b[39;49m\u001b[39mppBody\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39;49mexplode()\u001b[39m.\u001b[39mvalue_counts()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m dataset\u001b[39m.\u001b[39mneg_word_counter \u001b[39m=\u001b[39m negative[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mexplode()\u001b[39m.\u001b[39mvalue_counts()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'StringMethods' object has no attribute 'explode'"
-     ]
+     "data": {
+      "text/plain": [
+       "1.0       save up to 70 on life insurance why spend more...\n",
+       "2.0       1 fight the risk of cancer http www adclick ws...\n",
+       "3.0       1 fight the risk of cancer http www adclick ws...\n",
+       "4.0       adult club offers free membership instant acce...\n",
+       "5.0       i thought you might like these 1 slim down gua...\n",
+       "                                ...                        \n",
+       "2601.0    subject computationally intensive methods in q...\n",
+       "2602.0    subject books a survey of american linguistics...\n",
+       "2603.0    subject wecol 98 western conference on linguis...\n",
+       "2604.0    subject euralex 98 revised programme euralex 9...\n",
+       "2605.0    body label 0 subject great part time or summer...\n",
+       "Name: ppBody, Length: 18651, dtype: object"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "d.pp_df['ppBody']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "the                      57407\n",
+       "_                        52195\n",
+       "to                       46435\n",
+       "and                      38993\n",
+       "of                       34897\n",
+       "                         ...  \n",
+       "jeri                         1\n",
+       "onwprescriptionsdrugs        1\n",
+       "linerpharmacy                1\n",
+       "doctormto                    1\n",
+       "uarantee                     1\n",
+       "Name: ppBody, Length: 85786, dtype: int64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.pos_word_counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "process_dataset(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "the                      57407\n",
+       "_                        52195\n",
+       "to                       46435\n",
+       "and                      38993\n",
+       "of                       34897\n",
+       "                         ...  \n",
+       "jeri                         1\n",
+       "onwprescriptionsdrugs        1\n",
+       "linerpharmacy                1\n",
+       "doctormto                    1\n",
+       "uarantee                     1\n",
+       "Name: ppBody, Length: 85786, dtype: int64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.pos_word_counter"
    ]
   },
   {
