--- a/classif.ipynb
+++ b/classif.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "5.0  4.0  I thought you might like these:\\r\\n1) Slim Dow...     1"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,8 +492,16 @@
     "                        phrase.append(split[i])\n",
     "        if \"remove_short_tokens\" in self.feature_selection:\n",
     "            #remove tokens with < 3 characters\n",
-    "            if isinstance(phrase, list):\n",
-    "                phrase =  list(itertools.chain.from_iterable([partial_phrase for partial_phrase in phrase if len(partial_phrase) > 2]))\n",
+    "            if len(self.feature_selection) > 1:\n",
+    "                phrases = []\n",
+    "                for j in range(0, len(phrase)):\n",
+    "                    partial_phrase = phrase[j]\n",
+    "                    split = partial_phrase.split(\" \")\n",
+    "\n",
+    "                    #recombine it, filtering out tokens of less than 3 characters, but keeping bigrams\n",
+    "                    recombined = \" \".join([p for p in split if len(p) > 2])\n",
+    "                    phrases.append(recombined)\n",
+    "                phrase = phrases\n",
     "            else:\n",
     "                split = phrase.split(\" \")\n",
     "                phrase = [partial_phrase for partial_phrase in split if len(partial_phrase) > 2]\n",
@@ -518,7 +526,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "really\n",
+      "very cool\n",
+      "\n",
+      "everyone\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_phrase = [\"i am really\", \"very cool\", \"hi\", \"everyone\"]\n",
+    "for j in range(0, len(test_phrase)):\n",
+    "    partial_phrase = test_phrase[j]\n",
+    "    split = partial_phrase.split(\" \")\n",
+    "\n",
+    "    #recombine it, filtering out tokens of less than 3 characters, but keeping bigrams\n",
+    "    recombined = \" \".join([p for p in split if len(p) > 2])\n",
+    "    print(recombined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +573,7 @@
        "18651"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,87 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d_df_copy = d.pp_df.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "positive_copy = d_df_copy[d_df_copy['label'] == \"1\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0      save up to 70 on life insurance why spend more...\n",
-       "2.0      1 fight the risk of cancer http www adclick ws...\n",
-       "3.0      1 fight the risk of cancer http www adclick ws...\n",
-       "4.0      adult club offers free membership instant acce...\n",
-       "5.0      i thought you might like these 1 slim down gua...\n",
-       "                               ...                        \n",
-       "429.0    subject lucky you congratulations you ve been ...\n",
-       "430.0    subject new on capitalfm com this is new at ht...\n",
-       "431.0    subject submit 600 this is not spam you are re...\n",
-       "432.0    subject submit 600 this is not spam you are re...\n",
-       "433.0    subject i can t stand it dear internet user de...\n",
-       "Name: ppBody, Length: 7328, dtype: object"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "positive_copy['ppBody']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0      [save, up, to, 70, on, life, insurance, why, s...\n",
-       "2.0      [1, fight, the, risk, of, cancer, http, www, a...\n",
-       "3.0      [1, fight, the, risk, of, cancer, http, www, a...\n",
-       "4.0      [adult, club, offers, free, membership, instan...\n",
-       "5.0      [i, thought, you, might, like, these, 1, slim,...\n",
-       "                               ...                        \n",
-       "429.0    [subject, lucky, you, congratulations, you, ve...\n",
-       "430.0    [subject, new, on, capitalfm, com, this, is, n...\n",
-       "431.0    [subject, submit, 600, this, is, not, spam, yo...\n",
-       "432.0    [subject, submit, 600, this, is, not, spam, yo...\n",
-       "433.0    [subject, i, can, t, stand, it, dear, internet...\n",
-       "Name: ppBody, Length: 7328, dtype: object"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "positive_copy['ppBody'].str.split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,109 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0       save up to 70 on life insurance why spend more...\n",
-       "2.0       1 fight the risk of cancer http www adclick ws...\n",
-       "3.0       1 fight the risk of cancer http www adclick ws...\n",
-       "4.0       adult club offers free membership instant acce...\n",
-       "5.0       i thought you might like these 1 slim down gua...\n",
-       "                                ...                        \n",
-       "2601.0    subject computationally intensive methods in q...\n",
-       "2602.0    subject books a survey of american linguistics...\n",
-       "2603.0    subject wecol 98 western conference on linguis...\n",
-       "2604.0    subject euralex 98 revised programme euralex 9...\n",
-       "2605.0    body label 0 subject great part time or summer...\n",
-       "Name: ppBody, Length: 18651, dtype: object"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d.pp_df['ppBody']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "the                      57407\n",
-       "_                        52195\n",
-       "to                       46435\n",
-       "and                      38993\n",
-       "of                       34897\n",
-       "                         ...  \n",
-       "jeri                         1\n",
-       "onwprescriptionsdrugs        1\n",
-       "linerpharmacy                1\n",
-       "doctormto                    1\n",
-       "uarantee                     1\n",
-       "Name: ppBody, Length: 85786, dtype: int64"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d.pos_word_counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "process_dataset(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "the                      57407\n",
-       "_                        52195\n",
-       "to                       46435\n",
-       "and                      38993\n",
-       "of                       34897\n",
-       "                         ...  \n",
-       "jeri                         1\n",
-       "onwprescriptionsdrugs        1\n",
-       "linerpharmacy                1\n",
-       "doctormto                    1\n",
-       "uarantee                     1\n",
-       "Name: ppBody, Length: 85786, dtype: int64"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d.pos_word_counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,11 +638,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
     "process_dataset(d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0       save 70 life insurance spend life quote saving...\n",
+       "2.0       1 fight risk cancer http www adclick ws p cfm ...\n",
+       "3.0       1 fight risk cancer http www adclick ws p cfm ...\n",
+       "4.0       adult club offers free membership instant acce...\n",
+       "5.0       thought might like 1 slim guaranteed lose 10 1...\n",
+       "                                ...                        \n",
+       "2601.0    subject computationally intensive methods quan...\n",
+       "2602.0    subject books survey american linguistics publ...\n",
+       "2603.0    subject wecol 98 western conference linguistic...\n",
+       "2604.0    subject euralex 98 revised programme euralex 9...\n",
+       "2605.0    body label 0 subject great part time summer jo...\n",
+       "Name: ppBody, Length: 18651, dtype: object"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2.pp_df['ppBody']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_                                                         52195\n",
+       "â                                                          9823\n",
+       "½ï                                                         7960\n",
+       "subject                                                    6630\n",
+       "com                                                        6140\n",
+       "                                                          ...  \n",
+       "stoneware                                                     1\n",
+       "gmjndydg                                                      1\n",
+       "c2zirzux0m1s75z5vc6iriykkityewt5ro3zsskpsyyu4nvgqcwnxo        1\n",
+       "haunch                                                        1\n",
+       "uarantee                                                      1\n",
+       "Name: ppBody, Length: 85634, dtype: int64"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2.pos_word_counter"
    ]
   },
   {
@@ -867,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,11 +791,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "process_dataset(d3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0       save life insurance spend life quote savings e...\n",
+       "2.0       fight risk cancer http www adclick cfm 315 pk0...\n",
+       "3.0       fight risk cancer http www adclick cfm 315 pk0...\n",
+       "4.0       adult club offers free membership instant acce...\n",
+       "5.0       thought might like slim guaranteed lose lbs da...\n",
+       "                                ...                        \n",
+       "2601.0    subject computationally intensive methods quan...\n",
+       "2602.0    subject books survey american linguistics publ...\n",
+       "2603.0    subject wecol western conference linguistics a...\n",
+       "2604.0    subject euralex revised programme euralex lieg...\n",
+       "2605.0    body label subject great part time summer job ...\n",
+       "Name: ppBody, Length: 18651, dtype: object"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d3.pp_df['ppBody']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "subject           6630\n",
+       "com               6141\n",
+       "email             5354\n",
+       "http              4930\n",
+       "free              4511\n",
+       "                  ... \n",
+       "confige              1\n",
+       "lmyrkuvo             1\n",
+       "mina                 1\n",
+       "highrollerspot       1\n",
+       "uarantee             1\n",
+       "Name: ppBody, Length: 84464, dtype: int64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d3.pos_word_counter"
    ]
   },
   {
